Some fixes #5